# milkyPressor

./: .gitignore  .gitmodules  README.md  output.c
data_compressor_app/: CMakeLists.txt  Makefile
data_compressor_app/src/: main.c  main.cpp  time_object.c  time_object.cpp  time_object.h
data_compressor_app/src_notify/: main.c
data_compressor_app/src_old/: main.cpp
sandbox/: data_type.py  generate_selector.py  main.py  ml_test.ipynb  ml_test.py  notebook.ipynb  notebook_2.ipynb  notebook_algo.ipynb  notebook_overview.ipynb  notebook_overview_paper.ipynb  notebook_overview_paper_comparation.ipynb  notebook_overview_paper_tmp.ipynb  notebook_results.ipynb  notebook_select_best.ipynb  notebook_select_best_classic.ipynb  output.c  playground.ipynb  requirements.txt  result_serialization.ipynb  result_strategy1.ipynb  result_strategy1_FxRF.ipynb  result_strategy2.ipynb  result_strategy3.ipynb  results.csv  results1a.csv  results1b.csv  results2a.csv  results2b.csv  results3a.csv  results3b.csv  signal_generator.py  smoke_test.py
sandbox/notebook/: parse_datasets.ipynb
sandbox/src/: data_type.py  line_metrics.py  measurement_provider.py  method_selector.py  metrics.py  model_generator.py  signal_generator.py
sandbox/src/data_compressor/: __init__.py  compressor.py  compressors_provider.py
sandbox/src/method_selector/: __init__.py  classic_method_selector.py  ml_method_selector.py
sandbox/src/metric/: __init__.py  comparation_metrics.py  feature_metrics.py  similarity_metrics.py  single_metrics.py
sandbox/src/serializer/: __init__.py  senml_cbor_serializer.py  (+2 more)
(+32 files in other folders)
